--- a/src/components/home/Dashboard.css
+++ b/src/components/home/Dashboard.css
@@ -218,6 +218,8 @@ body {
 .card
 {
     background-color: #a6b2b5;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
 }
 
 .charts {
